--- a/JoyShockLibrary/JoyShockLibrary.vcxproj.filters
+++ b/JoyShockLibrary/JoyShockLibrary.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="InputHelpers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GMLWrapper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
