--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required (VERSION 3.12)
 
 project ("JoyShockLibrary" CXX)
 
+set(CMAKE_CXX_STANDARD 17)
+
 include (cmake/LinuxConfig.cmake)
 include (cmake/WindowsConfig.cmake)
 
@@ -10,5 +12,4 @@ if (BUILD_SHARED_LIBS)
 else ()
     set (JSL_PLATFORM_DEPENDENCY_VISIBILITY PUBLIC)
 endif ()
-
 add_subdirectory (JoyShockLibrary)
